<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_assignment4"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scann"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_hospital"
        android:icon="@drawable/ic_hospital"
        android:title="@string/title_hospital" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />
</menu>