<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.change.ChangePassActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_back_circle"
        android:backgroundTint="@color/button2"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="270dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="270dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePass"
            android:textStyle="bold"
            android:textColor="@color/button2"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/newPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/neww" />
        <EditText
            android:id="@+id/newwPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:hint="@string/confirm" />

        <Button
            android:id="@+id/save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sv"
            android:layout_marginTop="100dp"/>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>