<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_result_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_circle_result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_back_circle"
        android:backgroundTint="@color/button2"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/tv_result_acc"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_result_circle"
        app:layout_constraintEnd_toEndOf="@+id/iv_result_circle"
        app:layout_constraintStart_toStartOf="@+id/iv_result_circle"
        app:layout_constraintTop_toTopOf="@+id/iv_result_circle" />

    <TextView
        android:id="@+id/tv_result_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_normal"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_result_circle"
        app:layout_constraintStart_toStartOf="@+id/iv_result_circle"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_acc" />

    <Button
        android:id="@+id/btn_save_result"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/button_save_result"
        android:text="@string/result_save"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_result_circle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_result_finish"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/button_result_finish"
        android:text="@string/selesai"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result_rs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nearby_rs"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_hospital" />

    <TextView
        android:id="@+id/tv_nearby_rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/medium"
        android:text="@string/nearby_rs"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_result" />

</androidx.constraintlayout.widget.ConstraintLayout>